# E-COMMERCE-FLASK-WEB-APP-V1

./: README.md  pyproject.toml
migrations/versions/: 23396234a1fd_initial_tables.py  2507398ae1d2_update_the_users_table_password.py  e302132bf339_update_the_products_table_amount.py  e85afdac2e7c_add_role_to_users_db.py
myapp/: __init__.py  config.py
myapp/Admin/: routes.py
myapp/Users/: routes.py
myapp/modules/: model.py
myapp/static/: style.css
myapp/templates/: cart.html  login.html  products.html
